# nxs1

./: .gitignore  AGENTS.md  TODO.md  build.js  build.sh  deploy.sh  package-lock.json  package.json  pyproject.toml  run.sh  setup.sh  tsconfig.json  wrangler.json  wrangler.toml
.wrangler/tmp/bundle-fsuEUU/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-LkRVMt/: worker.js  worker.js.map
backend/: app.py  requirements.txt  tui.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.html  app.scss  app.ts
frontend/src/app/services/: api.service.ts  fingerprint.service.ts
migrations/: 0002_create_config_table.sql
scripts/: tunnel.service
src/: index.ts  worker.ts
src/db/: schema.sql
src/public/: index.html  main-RNLDNRYW.js  styles-YYVFTGVZ.css
src/public/css/: styles.css
src/public/js/: background.js  internal.js  ui.js
src/public/scss/: styles.scss
src/public/ts/: background.ts  internal.ts  ui.ts
src/utils/: fingerprint.ts  logger.ts  security.ts
