[tool.poetry]
name = "cloudfared-tunneling"
version = "1.0.0"
description = "Cloudflare Tunnel Manager with Python Backend"
authors = ["tuliofh01"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
psutil = "^5.9.8"
cryptography = "^42.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.group.tui.dependencies]
textual = "^0.52.0"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
